# visualization.hypnomix

./: CMakeLists.txt  Makefile  addon.cpp  addon.xml  dir.c  fft.h  hypnomix.c  hypnomix.h  mathematics.c  module.h  opengl.h  presets.c  presets.h  shader.c  shader.h  sync.sh  transform.c
modules/: Makefile  Makefile-sandbox  font.P  font.c  font.h  mod_7rain.P  mod_7rain.c  mod_flag.P  mod_geography.P  mod_geography.c  mod_geography.c_TEST  mod_kinetics.P  mod_kinetics.c  mod_parasite.P  mod_python.P  mod_python.c  mod_stratoscape.P  mod_tuto.P  mod_tuto.c  mod_unknown_pleasure.P  mod_unknown_pleasure.c  mod_waste.P  mod_waste.c  obj.P  obj.c  obj.c-BROKEN  obj.h  particles.P  particles.c  pool.P  pool.c  skybox.P  skybox.c  skybox.h  texture.P  texture.c
resources/: amiga.fsh  flat.vsh  flat.vsh_OLD  font.fsh  font.vsh  geometry.fsh  geometry.hpr  light.fsh  light.vsh  mod_tuto.py  particle.fsh  particle.vsh  smooth.fsh  smooth.vsh  test.c  test.vsh  waste.hpr
sandboxsrc/: Makefile-OLD  sandbox  sandbox.c  ticktimer.c  ticktimer.h  x11gl.h  x11keycode.h
src/: addon.cpp  dir.h  fft.c  mathematics.h  module.c  opengl.c  shader.c  transform.h
src/modules/: .Makefile.swp  mod_flag.c  mod_parasite.c  mod_stratoscape.c  mod_waste.c  particles.h  pool.h  texture.h  unknownpleasure.c
src/sandboxsrc/: Makefile  sandbox  x11gl.c
visualization.hypnomix/: addon.xml  addon.xml.in  changelog.txt  hypnomix.vis
visualization.hypnomix/resources/: 7rain.hpr  basic.fsh  directional.fsh  directional.vsh  flat.fsh  geography.hpr  geometry.geo  geometry.vsh  kinetics.hpr  mod_python.py  module.py  noisybw.fsh  particle.vsh  test.fsh  thru.gsh  tuto.hpr  unknown_pleasure.hpr  waste.hpr
visualization.hypnomix/resources/language/English/: strings.po
